{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 19,
  "lineage": "3b216e94-ef2c-df47-6205-b7dc5b5507cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f918f7e67a3323f0",
            "arn": "arn:aws:ec2:ap-south-1:694062401953:instance/i-097c2b238e6e8afeb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097c2b238e6e8afeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-assignment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b9b0256a48c52ee4"
              }
            ],
            "primary_network_interface_id": "eni-0b9b0256a48c52ee4",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-206-99-243.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.99.243",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00d22e387fe5681ea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009f508e3b5e40e56",
            "tags": {
              "Name": "octabyte-devops-assignment-app-1"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-app-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3ca72a11874ecee"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "i-097c2b238e6e8afeb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f918f7e67a3323f0",
            "arn": "arn:aws:ec2:ap-south-1:694062401953:instance/i-0919e71dd397776f6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0919e71dd397776f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-assignment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06fa35b0047873c8f"
              }
            ],
            "primary_network_interface_id": "eni-06fa35b0047873c8f",
            "private_dns": "ip-10-0-2-144.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.144",
            "public_dns": "ec2-3-7-68-11.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.68.11",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08093f6956e789285",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f88a4e7f480abcf",
            "tags": {
              "Name": "octabyte-devops-assignment-app-2"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-app-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3ca72a11874ecee"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "i-0919e71dd397776f6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:internet-gateway/igw-032a42cd359790c36",
            "id": "igw-032a42cd359790c36",
            "owner_id": "694062401953",
            "region": "ap-south-1",
            "tags": {
              "Name": "octabyte-devops-assignment-igw"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-igw"
            },
            "vpc_id": "vpc-0e9671cd43856f19b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "igw-032a42cd359790c36",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:route-table/rtb-0fbf6fb4bc5bc40c8",
            "id": "rtb-0fbf6fb4bc5bc40c8",
            "owner_id": "694062401953",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "octabyte-devops-assignment-private-rt"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9671cd43856f19b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "rtb-0fbf6fb4bc5bc40c8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:route-table/rtb-0f4e61b0d2acd5f17",
            "id": "rtb-0f4e61b0d2acd5f17",
            "owner_id": "694062401953",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032a42cd359790c36",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "octabyte-devops-assignment-public-rt"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9671cd43856f19b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "rtb-0f4e61b0d2acd5f17",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b803130b9b334703",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fbf6fb4bc5bc40c8",
            "subnet_id": "subnet-01f40d9b99885dc7b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "rtbassoc-0b803130b9b334703",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e7bdc9adef997d1",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fbf6fb4bc5bc40c8",
            "subnet_id": "subnet-0b49e5613ee53d6c4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "rtbassoc-06e7bdc9adef997d1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013c2556841d23903",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f4e61b0d2acd5f17",
            "subnet_id": "subnet-009f508e3b5e40e56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "rtbassoc-013c2556841d23903",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011bf0d82744d281a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f4e61b0d2acd5f17",
            "subnet_id": "subnet-07f88a4e7f480abcf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "rtbassoc-011bf0d82744d281a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:security-group/sg-0c3ca72a11874ecee",
            "description": "Security group for application EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3ca72a11874ecee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask application",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "octabyte-devops-assignment-app-sg",
            "name_prefix": "",
            "owner_id": "694062401953",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "octabyte-devops-assignment-app-sg"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9671cd43856f19b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "sg-0c3ca72a11874ecee",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:security-group/sg-08d3f67b67bf2e52b",
            "description": "Security group for PostgreSQL RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d3f67b67bf2e52b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from application servers",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3ca72a11874ecee"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "octabyte-devops-assignment-db-sg",
            "name_prefix": "",
            "owner_id": "694062401953",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "octabyte-devops-assignment-db-sg"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9671cd43856f19b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "sg-08d3f67b67bf2e52b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:subnet/subnet-01f40d9b99885dc7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f40d9b99885dc7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694062401953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "octabyte-devops-assignment-private-1"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-private-1"
            },
            "vpc_id": "vpc-0e9671cd43856f19b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "subnet-01f40d9b99885dc7b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:subnet/subnet-0b49e5613ee53d6c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b49e5613ee53d6c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694062401953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "octabyte-devops-assignment-private-2"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-private-2"
            },
            "vpc_id": "vpc-0e9671cd43856f19b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "subnet-0b49e5613ee53d6c4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:subnet/subnet-009f508e3b5e40e56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009f508e3b5e40e56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "694062401953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "octabyte-devops-assignment-public-1"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-public-1"
            },
            "vpc_id": "vpc-0e9671cd43856f19b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "subnet-009f508e3b5e40e56",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:subnet/subnet-07f88a4e7f480abcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f88a4e7f480abcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "694062401953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "octabyte-devops-assignment-public-2"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-public-2"
            },
            "vpc_id": "vpc-0e9671cd43856f19b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "subnet-07f88a4e7f480abcf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:694062401953:vpc/vpc-0e9671cd43856f19b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dfa2eb399024c8b6",
            "default_route_table_id": "rtb-08bf4a85eca0aa676",
            "default_security_group_id": "sg-0b73816abde881a86",
            "dhcp_options_id": "dopt-0990a13a352b28f76",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9671cd43856f19b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bf4a85eca0aa676",
            "owner_id": "694062401953",
            "region": "ap-south-1",
            "tags": {
              "Name": "octabyte-devops-assignment-vpc"
            },
            "tags_all": {
              "Name": "octabyte-devops-assignment-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "694062401953",
            "id": "vpc-0e9671cd43856f19b",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}